[gd_scene load_steps=5 format=3 uid="uid://c16gi3ylo6fgw"]

[ext_resource type="Script" uid="uid://exq0nt4rm141" path="res://scene/template/shader_setting_template.gd" id="1_jvu7k"]
[ext_resource type="Shader" uid="uid://dhbkntdkd4d8h" path="res://Resource/shader/script/augment_test.gdshader" id="2_bqj1m"]
[ext_resource type="Material" uid="uid://bmnh0xxerisd8" path="res://Resource/shader/material/dummy.tres" id="3_er705"]
[ext_resource type="PackedScene" uid="uid://7cld2fnd8lwf" path="res://scene/template/float_arg_modifier.tscn" id="3_s0ome"]

[node name="ShaderSettingTemplate" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -509.0
offset_bottom = -545.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jvu7k")
shader = ExtResource("2_bqj1m")
shader_material = ExtResource("3_er705")
float_arg_scene = ExtResource("3_s0ome")
int_arg_scene = ExtResource("3_s0ome")
vec3_arg_scene = ExtResource("3_s0ome")

[node name="ArgsContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="TitleBar" type="HBoxContainer" parent="ArgsContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="ArgsContainer/TitleBar"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Parameters"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ArgsContainer/TitleBar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Min Value"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="ArgsContainer/TitleBar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Max Value"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="ArgsContainer/TitleBar"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Slide"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="ArgsContainer/TitleBar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Current"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
